Update and rename consept.html to concept.html

--- a/concept.html
+++ b/concept.html
@@ -21,7 +21,7 @@
 <div class="box fadeLeft">
 <ul class = "index">
 	<li><a class = "bft" href="index.html" title="TOP">TOP</a></li>
-	<li><a class = "bft" href="consept.html" title="コンセプト" style="background-color:#ffcc99;">CONSEPT</a></li>
+	<li><a class = "bft" href="concept.html" title="コンセプト" style="background-color:#ffcc99;">CONCEPT</a></li>
 	<li><a class = "bft" href="product.html" title="プロダクト">PRODUCT</a></li>
 	<li><a class = "bft" href="column.html" title="コラム">COLUMN</a></li>
 </ul>
