--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="box fadeLeft">
 <ul class = "index">
 	<li><a class = "wft" href="index.html" title="TOP" style="background-color:#ffcc99;">TOP</a></li>
-	<li><a class = "wft" href="consept.html" title="コンセプト">CONCEPT</a></li>
+	<li><a class = "wft" href="concept.html" title="コンセプト">CONCEPT</a></li>
 	<li><a class = "wft" href="product.html" title="プロダクト">PRODUCT</a></li>
 	<li><a class = "wft" href="column.html" title="コラム">COLUMN</a></li>
 </ul>
