--- a/product.html
+++ b/product.html
@@ -21,7 +21,7 @@
 <div class="box fadeLeft">
 <ul class = "index">
 	<li><a class = "bft" href="index.html" title="TOP">TOP</a></li>
-	<li><a class = "bft" href="consept.html" title="コンセプト">CONSEPT</a></li>
+	<li><a class = "bft" href="concept.html" title="コンセプト">CONCEPT</a></li>
 	<li><a class = "bft" href="product.html" title="プロダクト" style="background-color:#ffcc99;">PRODUCT</a></li>
 	<li><a class = "bft" href="column.html" title="コラム">COLUMN</a></li>
 </ul>
