--- a/column.html
+++ b/column.html
@@ -48,7 +48,7 @@
 <div id  = "foot">
 <h2 class = "mato">MATO</h2>
 		<span><a class = "wft" href="index.html" title="TOP">TOP</a>
-		<span><a class = "wft" href="consept.html" title="コンセプト">CONSEPT</a>
+		<span><a class = "wft" href="concept.html" title="コンセプト">CONCEPT</a>
 		<span><a class = "wft" href="product.html" title="プロダクト">PRODUCT</a>
 		<span><a class = "wft" href="column.html" title="コラム">COLUMN</a></span><br>
 		<p><a class = "wft" href="https://twitter.com/barackobama" title="Twitter">公式Twitterアカウントへ</a></p>
